Purpur API patch work has been completed