@@ -30,6 +30,9 @@ allprojects {
     tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8'
         options.warnings = false
+        options.compilerArgs.addAll([
+                '--add-modules=jdk.incubator.vector'
+        ])
     }
     configurations.configureEach {
         exclude group: 'com.mojang', module: 'brigadier'
